flaskapi-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
  namespace: user-management-system
  labels:
    app: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
        - name: user-management-system
          image: khushpreet/user_management_system:latest2313  
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
