service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: NodePort
  ports:
    - port: 5000
      nodePort: 3003
      name: http
  selector:
    app: main
